# memento

./: .env.example  .gitignore  README.en.md  README.md  docker-compose.yml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: desktop-release.yml
collector/: LICENSE  README.md  pyproject.toml
collector/collector/: cli.py  codex_export.py  compat.py  config.py  discovery.py  main.py  queue.py  sanitizer.py  sync_client.py  tls.py  watcher.py
collector/collector/parsers/: antigravity_export.py  antigravity_pb_decoder.py  antigravity_vscdb.py  base.py  json_parser.py  jsonl.py  markdown.py  sqlite_parser.py  toml_parser.py
collector/collector/tools/: antigravity.py  base.py  claude_code.py  codex.py  cursor.py  obsidian.py  openclaw.py
collector/scripts/: export_codex_local.py
collector/tests/: test_antigravity_export.py  test_antigravity_vscdb.py  test_codex_export.py
deploy/: setup-aliyun-proxy.sh
deploy/bootstrap/: index.html  install.ps1  install.sh
deploy/k8s/: README.md  kustomization.yaml
docs/: collector-architecture.md  project-architecture.md
embedding/: Dockerfile  embedding_server.py
mcp_server/: README.md  pyproject.toml
mcp_server/mcp_server/: __init__.py  __main__.py  db.py  graph.py  remote_client.py  search.py  server.py  tls.py
memento_brain/: README.md  pyproject.toml
memento_brain/memento_brain/: __init__.py
scripts/: install.py  migrate_rebrand.py
scripts/install_lib/: __init__.py  bootstrap_user.py  collector_setup.py  docker_up.py  embedding_host.py  env_gen.py  platform_utils.py
scripts/templates/: memento-embedding-task.xml.tmpl  memento-embedding.plist.tmpl  memento-embedding.service.tmpl
server/: Dockerfile  alembic.ini  pyproject.toml
server/server/: config.py  main.py
server/server/api/: admin.py  auth.py  conversations.py  daily.py  dashboard.py  devices.py  documents.py  events.py  hierarchy.py  ingest.py  install_bootstrap.py  mcp_mount.py  memory.py  projects.py  public.py  search.py  share.py  tools.py
server/server/db/: models.py  session.py
server/server/middleware/: access_log.py  auth.py
server/server/services/: ai_summary_service.py  cache.py  conversation_parser.py  device_service.py  embedding_server.py  embedding_service.py  graph_service.py  ingest_service.py  memory_compaction.py  permission_service.py  search_service.py  sse_service.py  summary_service.py  user_filter.py
server/server/tasks/: celery_app.py  daily_digest.py  db_backup.py  embedding_retry.py  knowledge_retry.py  summary_tasks.py
server/tests/: test_conversation_parser.py
tauri-collector/: .gitignore  README.md
tauri-collector/sidecar/: build_sidecar.py
tauri-collector/src-tauri/: Cargo.toml  tauri.conf.json
tauri-collector/src-tauri/capabilities/: default.json
tauri-collector/src-tauri/src/: config.rs  ipc.rs  lib.rs  main.rs  sidecar.rs
web/: Dockerfile  package-lock.json  package.json
web/src/app/: client-layout.tsx  globals.css  layout.tsx
web/src/app/admin/: page.tsx
web/src/app/app/: page.tsx
web/src/app/auth/: github-login.tsx
web/src/app/auth/callback/: page.tsx
web/src/app/auth/login/: page.tsx
web/src/app/auth/register/: page.tsx
web/src/app/conversations/[id]/: page.tsx
web/src/app/daily/: page.tsx
web/src/app/daily/[date]/: page.tsx
web/src/app/devices/: page.tsx
web/src/app/devices/[deviceId]/tools/[toolId]/: page.tsx
web/src/app/devices/[deviceId]/tools/[toolId]/projects/[projectId]/: page.tsx
web/src/app/documents/[id]/: page.tsx
web/src/app/memory/: page.tsx
web/src/app/profile/: page.tsx
web/src/app/projects/: page.tsx
web/src/app/projects/[id]/: page.tsx
web/src/app/projects/[id]/conversations/: page.tsx
web/src/app/projects/[id]/timeline/: page.tsx
web/src/app/s/[token]/: page.tsx
web/src/app/search/: page.tsx
web/src/app/tools/: page.tsx
web/src/app/tools/[tool]/: page.tsx
web/src/components/: ShareModal.tsx  TokenDisplay.tsx  UserMenu.tsx
web/src/components/aurora/: AuroraBackdrop.tsx  BrandMark.tsx  Icon.tsx  primitives.tsx
web/src/components/dashboard/: ToolCard.tsx
web/src/components/landing/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstallBlock.tsx  Landing.tsx  LandingNav.tsx  ToolMatrix.tsx
web/src/components/layout/: Header.tsx  Sidebar.tsx
web/src/components/viewers/: ConfigViewer.tsx  ConversationViewer.tsx  MarkdownViewer.tsx
web/src/lib/: api-client.ts  auth-context.tsx  constants.ts  device-context.tsx  theme-context.tsx  use-sse.ts
web/src/lib/i18n/: en-US.ts  index.ts  zh-CN.ts
