[project]
name = "memento-brain"
version = "0.0.8"
description = "Memento — a shared brain for your AI coding tools (umbrella/meta package)"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
authors = [{name = "ddong8"}]
keywords = ["memento", "memento-brain", "ai", "mcp", "claude", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
# Meta-package: pulls in both the collector daemon and the MCP memory server.
dependencies = [
    "memento-brain-collector>=0.0.1",
    "memento-brain-memory>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/ddong8/memento"
Repository = "https://github.com/ddong8/memento"
Issues = "https://github.com/ddong8/memento/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memento_brain"]
