[project]
name = "memento-server"
version = "0.1.0"
description = "Memento — a shared brain for your AI coding tools. Server component."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "anthropic>=0.49",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pgvector>=0.3",
    "openai>=1.30",
    "mcp>=1.26",
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
