[package]
name = "memento-app"
version = "0.1.6"
description = "Memento desktop — manages the local collector daemon"
authors = ["ddong8"]
license = "AGPL-3.0-only"
repository = "https://github.com/ddong8/memento"
edition = "2021"
rust-version = "1.75"

[lib]
name = "memento_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Spawning + monitoring the collector child (sync calls)
parking_lot = "0.12"
thiserror = "1"
anyhow = "1"
dirs = "5"
tracing = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
